# libsys-airflow

./: .coverage  .coveragerc  .flake8  .gitignore  .gitmodules  Capfile  Dockerfile  Gemfile  README.md  airflow.cfg  alembic.ini  bibs_transformer.py  blackupdate.toml  compose.prod.yaml  compose.yaml  diff_files.txt  docker-compose.prod.yaml  docker-compose.yaml  fix_and_migrate.sh  helm-airflow.yaml  holdings_marc_transformer.py  log_config.py  migration_task_base.py  pyproject.toml  qa.sql  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  python-app.yml  tests.yml  typechecking.yml  update-dependencies.yml
config/: deploy.rb  qa.sql
config/deploy/: dev.rb  prod.rb  stage.rb
dags/: aeon_to_lobby.py  audit_remediate.py  auto_load_bibs.py  batch_circ_rule_tester.py  bib_records.py  delete_archived_data.py  folio_post.py  new_boundwiths.py  ol_manage.py  preceding_succeding_titles.py  remediate_records.py  simple_circ_rule_tester.py  srs_ingestion.py  srs_remediation.py  vendor_marc_bib_load.py
digital_bookplates_migration/: env.py
digital_bookplates_migration/versions/: 3ba541982292_delete_from_argo_column.py  46e6a9bb59d0_rename_to_fund_name.py  61bd8c901b49_adds_fund_uuid_column_to_digital_.py  a0ad7b351d39_added_digital_bookplates_table.py
docker/: init-multi-postgres-dbs.sh
libsys_airflow/: conftest.py
libsys_airflow/dags/: aeon_to_lobby.py  audit_remediate.py  auto_load_bibs.py  batch_circ_rule_tester.py  bib_records.py  course_reserves_data.py  delete_archived_data.py  folio-instances-rag.py  gobi.py  new_boundwiths.py  ol_manage.py  payments_to_orafin.py  preceding_succeding_titles.py  reading_room_access.py  simple_circ_rule_tester.py  srs_discovery.py  srs_ingestion.py  srs_remediation.py  update_marc_to_instances.py  vendor_db_init.py  vendor_marc_bib_load.py  vendor_records.py
libsys_airflow/plugins/: folio_client.py
libsys_airflow/tasks/: marc_filter.py
libsys_airflow/utils/: files.py
plugins/: remove_old_files_cron.py
plugins/aeon_to_lobby/: aeon.py  lobbytrack.py
plugins/folio/: audit.py  circ_rules.py  circ_tester.py  db.py  helpers.py  holdings.py  instances.py  interface.py  items.py  login.py  main.py  marc.py  qa.sql  remediate.py
plugins/tests/: mocks.py  test_aeon_to_lobby.py  test_audit.py  test_circ_rules.py  test_dag_loading.py  test_db.py  test_delete_archived_data.py  test_helpers.py  test_holdings.py  test_instances.py  test_interface.py  test_items.py  test_login.py  test_main.py  test_marc.py  test_preceding_succeeding_titles.py  test_remediate.py  test_vendor_marc_bib_load.py
tests/: airflow_client.py  client.py  conftest.py  mocks.py  test_aeon_to_lobby.py  test_airflow_client.py  test_airflow_queries.py  test_alembic.py  test_audit.py  test_circ_rules.py  test_connections.py  test_courses.py  test_data_import.py  test_db.py  test_delete_archived_data.py  test_fix_encumbrances_run.py  test_folio_client.py  test_gobi.py  test_helpers.py  test_holdings.py  test_instances.py  test_interface.py  test_inventory.py  test_invoices.py  test_items.py  test_login.py  test_orafin_payments.py  test_orders.py  test_preceding_succeeding_titles.py  test_reading_room.py  test_remediate.py  test_reports.py  test_sdr.py  test_srs_remediation.py  test_vendor_marc_bib_load.py
tests/apps/: test_boundwith_view.py  test_circ_rules_tester_views.py  test_folio_migration_view.py  test_vendor_management_view.py
tests/authority_control/: test_authority_email.py  test_authority_helpers.py  test_folio_data_import.py
tests/data_exports/: test_data_exports_emails.py  test_full_dump_selections.py  test_gobi_exports_list.py  test_marc_exports.py  test_marc_transformations.py  test_oclc.py  test_oclc_api.py  test_oclc_reports.py  test_remove_archived.py  test_sal3_caiasoft_items.py  test_save_instance_ids.py  test_transmission_tasks.py
tests/digital_bookplates/: test_add_marc_tags.py  test_bookplates.py  test_bookplates_emails.py  test_bookplates_funds.py  test_dag_979_sensor.py  test_digital_bookplate_model.py  test_instances_from_po_lines.py  test_purl_fetcher.py  test_retry_failed_979s.py
tests/encumbrances/: test_fix_encumbrances_run.py
tests/helpers/: test_boundwiths.py  test_folio_ids.py  test_marc.py  test_marc_helper.py  test_orafin_models.py  test_tsv.py
tests/orafin/: test_ap_reports.py  test_generated_emails.py  test_models.py  test_payments.py  test_reports.py  test_tasks.py
tests/sdr/: test_item_stat_codes.py
tests/shared/: test_purge.py  test_utils.py
tests/utils/: test_files.py
tests/vendors/: test_functions.py
vendor_loads_migration/: env.py
vendor_loads_migration/versions/: 0690013481e5_alembic_heads_merged.py  0ba6b75cc77a_new_status_and_expected_execution_column.py  1d954292be5e_merge_expected_load_time_changes.py  274ed33dae43_vendorinterface_model_add_processing_.py  2c3487e0cac6_.py  310b31225b9d_remove_has_active_vendor_interfaces.py  325a951f65c7_add_folio_job_execution_uuid.py  3327b26c27ad_add_vendor_file_model.py  338ba062b8f4_add_filedataload_model.py  35ba6262f0a0_remove_unique_constraint_on_folio_data_.py  35c6cd1d594e_.py  46c754d079ce_remove_uniqueness_contraint_from_vendor_.py  518b3d98f625_adds_note_to_vendorinterface.py  55557ab268c9_add_vendor_interface_model.py  58a045522fe5_folio_interface_uuid_nullable.py  5d7df5e8f5d7_make_configuration_fields_nullable_for_.py  5dc5da2d1d3c_increasing_length_of_vendorinterface_.py  683e48ee4e57_add_processing_states.py  6877e5af64dd_merge_acb1395e79ee_and_1d954292be5e.py  697f20501d64_add_processed_filename_to_vendor_file.py  6ce07f19623f_add_loaded_history_to_vendorfile.py  6fcfcb9d2ee4_allowing_null_acquisitions_unit_from_.py  80041eebb354_add_file_model.py  82368e89d0cb_drop_filedataload_model_add_dag_run_id.py  910e6f44a08e_adds_new_enum_for_file_status.py  965229094874_create_vendors_table.py  9671879df3f4_add_archive_date_to_vendor_file.py  975b4e3f53f3_add_uploaded_file_status.py  991306da2f56_add_skipped_file_status.py  9ad8c2163afc_increase_size_of_data_import_processing_.py  b812c8abeaf3_.py  (+13 more)
(+258 files in other folders)
