[tool.poetry]
name = "libsys-airflow"
version = "0.1.0"
description = "Airflow DAGS for migrating and managing ILS data into FOLIO along with other LibSys workflows"
authors = ["Jeremy Nelson <jpnelson@stanford.edu>", "Joshua Greben <jgreben@stanford.edu>", "Shelley Doljack", "Laura Wrubel", "Michael J. Giarlo <mjgiarlo@stanford.edu>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
argparse-prompt = "^0.0.5"
jsonpath-ng = "^1.5.3"
numpy = "^1.22.3"
objectpath = "^0.6.1"
pandas = "^1.4.1"
pydantic = "^1.9.0"
pymarc = "^5.0.0"
requests = "^2.31.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
alembic = "^1.10.4"
psycopg2-binary = "^2.9.6"
python-magic = "^0.4.27"
honeybadger = "^0.15.2"
# Needed according to HB docs.
blinker = "^1.6.2"
folio-migration-tools = "^1.8.1"
werkzeug = "2.3.7"
connexion = "2.14.1"
# Pinning until Airflow updates this dependency
pendulum = "2.1.2"
# Pinning until ticket https://github.com/apache/airflow/issues/36897
flask-session = "<0.6.0"
markdown = "^3.6"
cattrs = "^23.2.3"
apache-airflow = {extras = ["amazon"], version = "^2.8.3"}
s3path = "^0.5.2"
boto3 = "^1.34.77"

[tool.poetry.group.test.dependencies]
black = "~24.3.0"
coveralls = "~3.3.1"
coverage = "~6.5.0"
flake8 = "^6.0.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.7.0"
# these are needed for running tests outside of the airflow docker container
# the airflow version here should be kept in sync with the docker image
apache-airflow = "2.8.3"
apache-airflow-providers-postgres = "5.4.0"
apache-airflow-providers-sftp = "^4.2.4"
requests-mock = "^1.10.0"
pytest-mock-resources = "^2.6.12"
beautifulsoup4 = "^4.12.2"
mypy = "^1.9.0"
types-requests = "^2.31.0.1"
types-markdown = "^3.4.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = 'vendor_loads_migration'
skip-string-normalization = true
color = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
explicit_package_bases = true
warn_unreachable = true
pretty = true
show_error_context = true
