[tool.poetry]
name = "libsys-airflow"
version = "1.0.0"
description = "Airflow DAGS for migrating and managing ILS data into FOLIO along with other LibSys workflows"
authors = ["Jeremy Nelson <jpnelson@stanford.edu>", "Joshua Greben <jgreben@stanford.edu>", "Shelley Doljack", "Laura Wrubel", "Michael J. Giarlo <mjgiarlo@stanford.edu>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
argparse-prompt = "^0.0.5"
jsonpath-ng = "^1.5.3"
numpy = "^1.22.3"
objectpath = "^0.6.1"
pandas = "2.3.3"
#pydantic = "^1.9.0"
pydantic = ">=2.11.0"
pymarc = "^5.0.0"
requests = "^2.31.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
alembic = "^1.10.4"
psycopg2-binary = "^2.9.9"
python-magic = "^0.4.27"
honeybadger = "^0.15.2"
# Needed according to HB docs.
blinker = "^1.6.2"
werkzeug = "<3.0"
connexion = "2.14.2"
pendulum = ">=3.0.0,<4.0"
# Pinning until ticket https://github.com/apache/airflow/issues/36897
flask-session = "<0.6.0"
markdown = "^3.6"
cattrs = "^23.2.3"
apache-airflow = {extras = ["amazon"], version = "3.1.0"}
s3path = "^0.5.2"
boto3 = "^1.34.77"
xmlsec = "1.3.14"
bookops-worldcat = "^1.0.1"
wtforms = "3.2.1"
folio-data-import = "^0.2.7"
paramiko = "<4.0.0"
# Pinning Flask-Limiter to keep in sync with Airflow
flask-limiter = "3.12"
ruff = "^0.14.1"
apache-airflow-providers-ftp = "^3.13.2"

[tool.poetry.group.test.dependencies]
black = "~24.3.0"
coveralls = "~3.3.1"
coverage = "~6.5.0"
flake8 = "^6.0.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.7.0"
# these are needed for running tests outside of the airflow docker container
# the airflow version here should be kept in sync with the docker image
apache-airflow = "3.1.0"
apache-airflow-providers-postgres = "6.3.0"
apache-airflow-providers-sftp = "5.4.0"
requests-mock = "^1.10.0"
pytest-mock-resources = "^2.6.12"
beautifulsoup4 = "^4.12.2"
mypy = "^1.9.0"
types-requests = "^2.31.0.1"
types-markdown = "^3.4.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
  /(
    vendor_loads_migration
    | digital_bookplates_migration
    | libsys_airflow/plugins/folio/encumbrances
  )/
'''
skip-string-normalization = true
color = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
warn_unreachable = true
pretty = true
show_error_context = true
exclude = [
    "libsys_airflow/plugins/folio/encumbrances/fix_encumbrances_master\\.py$",
]
